<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetallePlanta">

    <TextView
        android:id="@+id/textView_comun"
        android:layout_width="163dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/textView_comun"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toEndOf="@+id/imageView_planta"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_cientifico"
        android:layout_width="164dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/textView_cientifico"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toEndOf="@+id/imageView_planta"
        app:layout_constraintTop_toBottomOf="@+id/textView_comun" />

    <TextView
        android:id="@+id/textView_descripcion"
        android:layout_width="217dp"
        android:layout_height="106dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="712dp"
        android:text="@string/textView_descripcion"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView_planta"
        app:layout_constraintTop_toBottomOf="@+id/textView_cientifico"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView_planta"
        android:layout_width="195dp"
        android:layout_height="220dp"
        android:contentDescription="@string/imageView_planta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <Button
        android:id="@+id/button_regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_planta"
        app:layout_constraintVertical_bias="0.034" />
</androidx.constraintlayout.widget.ConstraintLayout>